RESOLVED FIXED258264
[GTK] gamepad API does not work
https://bugs.webkit.org/show_bug.cgi?id=258264
Summary [GTK] gamepad API does not work
Sonny Piers
Reported 2023-06-18 10:53:49 PDT
The gamepad API doesn't work. Epiphany Fedora KO Epiphany Flatpak KO /usr/libexec/webkitgtk-6.0/MiniBrowser https://gamepad-tester.com/ /usr/libexec/webkitgtk-6.0/MiniBrowser https://gamepad-tester.com/ KO Firefox (non-Flatpak) OK See https://matrix.to/#/!UmyxSUfZGshMuHqkog:matrix.org/$jU7kebeIvXP2mGuNZcjeIUmZWVxfE4YktCj4MiZ0qpM?via=igalia.com&via=matrix.org&via=gnome.org
Attachments
Georges Basile Stavracas Neto
Comment 1 2024-01-31 10:08:18 PST
EWS
Comment 2 2024-01-31 19:44:47 PST
Committed 273882@main (7ca356b2f1bf): <https://commits.webkit.org/273882@main> Reviewed commits have been landed. Closing PR #23598 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.