Cherry-pick 273882@main (7ca356b2f1bf). https://bugs.webkit.org/show_bug.cgi?id=258264

[GTK] Check window focus with gtk_window_is_active()
    https://bugs.webkit.org/show_bug.cgi?id=258264

    Reviewed by Michael Catanzaro.

    In GTK3, gtk_widget_has_focus() called on a GtkWindow has the semantics
    of "does this window receive input". This semantic is not preserved in
    GTK4; instead, gtk_window_is_active() is what yields the same results.

    By using gtk_widget_has_focus() in UIGamepadProviderGtk, it always
    returned false, and prevented gamepad detection from properly working.
    Switch that to gtk_window_is_active().

    * Source/WebKit/UIProcess/Gamepad/gtk/UIGamepadProviderGtk.cpp:
    (WebKit::UIGamepadProvider::platformWebPageProxyForGamepadInput):

    Canonical link: https://commits.webkit.org/273882@main